syntax = "proto3";

package event;


message Event {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetEventRequest {
  string _id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message SearchEventsRequest {
  string query = 1;
}

message SearchEventsResponse {
  repeated Event events = 1;
}

message CreateEventRequest {
  string event_id = 1;
  string title = 2;
  string description = 3;
}

message CreateEventResponse {
  Event event = 1;
}

service EventService {
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);
  rpc SearchEvents(SearchEventsRequest) returns (SearchEventsResponse);
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
}
